Changelog
=========

2015/08/01 (v0.4.0)
 - Closes bugs :
   - #2: use close_fds in subprocess.Popen
   - #3: memory leak parsing xml using xml.dom.minidom
 - Corrects a bug in parsing osclass
 - Add nosetests for case testing
 - Removed test case in docstring

2015/05/08 (v0.3.7)
 - adding sudo parameter for scanning (idea from scupython)

2015/05/08 (v0.3.6)
 - correcting issue 7 : Issues under windows

2015/05/08 (v0.3.5)
 - correcting a bug in all_protocols()
 - correcting issue 8 : PortScannerAsync Doesn't work in windows...

2014/06/22 (v0.3.4)
 - adding PortScannerYield class with generator
   >>> nm = nmap.PortScannerYield()
   >>> for i in nm.scan('127.0.0.1/24', '22-25'):
   >>>     print(i)

2014/03/13 (v0.3.3)
 - moving file example.py
 - adding function convert_nmap_output_to_encoding
 - adding vendor for mac address

2013/09/23 (v0.3.2)
 - adding acces to CPE values under [host][proto][port]['cpe'] key

2013/07/27 (v0.3.1)
 - Bug correction on callback's assert in PortScannerAsync.scan
   proposed by Robert Bost

2013/06/23 (v0.3.0)
 - added support for NMAP SCRIPT ENGINE
   >>> r=nm.scan(hosts='127.0.0.1', ports='139', arguments="-sC ")
   >>> print(nm._scan_result['scan']['127.0.0.1']['hostscript'])

2013/02/24 (v0.2.7)
 - added an address block in host scan result which contains ipv4, mac and other addresses :
   nm = nmap.PortScanner()
   r = nm.scan(arguments='-sS -p T:22', hosts='192.168.1.3')
   print r['scan']['192.168.1.3']['addresses']
   {u'mac': u'02:50:43:F4:02:B1', u'ipv4': u'192.168.1.3'}
 - Adding a CSV scan output as a string.
 - Changes examples.py to make it python3 compliant

2012/12/13 (v0.2.6)
 - patch from lundberg.johan
 - bug correction : when nmap doesn't work displays stderr instead of stdout

2012/11/23 (v0.2.5)
 - corrected : Issue 2: "map.nmap.PortScannerError: 'nmap program was not found in path'" on CentOS
 - corrected : Issue 3: nmap.scan() short-circuits prematurely

2011/11/09 (v0.2.4)